This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: tkinter.tkapp.merge() fails on non-strings
Type: behavior Stage: resolved
Components: Tkinter Versions: Python 3.3
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: gpolo, python-dev, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2013-09-15 20:51 by serhiy.storchaka, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
tkinter_merge.patch serhiy.storchaka, 2013-09-15 20:51 review
Messages (2)
msg197833 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2013-09-15 20:51
tkinter.tkapp.merge() recursively merge Python data into Tcl string. When a subitem neither tuple, string or byte string, it calls str() on it. But then it use PyBytes_AsString() which always fails because accepts bytes instead of str.

The proposed patch fixes processing general objects in merge(), simplifies processing strings, and adds tests.

This is only 3.3 issue. merge() was deprecated and removed in 3.4.
msg198337 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2013-09-23 20:26
New changeset 5c1c67d980bb by Serhiy Storchaka in branch '3.3':
Issue #19028: Fixed tkinter.Tkapp.merge() for non-string arguments.
http://hg.python.org/cpython/rev/5c1c67d980bb
History
Date User Action Args
2022-04-11 14:57:51adminsetgithub: 63228
2013-09-23 20:28:21serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2013-09-23 20:26:11python-devsetnosy: + python-dev
messages: + msg198337
2013-09-15 20:51:08serhiy.storchakacreate