Issue #19028: Fixed tkinter.Tkapp.merge() for non-string arguments.